[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "agentkit-py"
version = "0.1.0"
description = "The agent reliability stack in one install: agentfit + agentguard + agentsnap + agentvet + agentcast (Python ports)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Mukunda Katta", email = "mukunda.vjcs6@gmail.com" }]
keywords = ["agent", "agentkit", "llm", "reliability", "agentfit", "agentguard", "agentsnap", "agentvet", "agentcast"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "agentfit-py>=0.1.0",
  "agentguard-firewall>=0.1.0",
  "agentsnap-py>=0.1.0",
  "agentvet-py>=0.1.0",
  "agentcast-py>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/MukundaKatta/agentkit-py"
Issues = "https://github.com/MukundaKatta/agentkit-py/issues"
Source = "https://github.com/MukundaKatta/agentkit-py"
"JS sibling" = "https://github.com/MukundaKatta/agentkit"

[tool.hatch.build.targets.wheel]
packages = ["src/agentkit"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
